# selfhosted-role-template

./: .gitignore  LICENSE  README.md  copier.yaml  pyproject.toml
.gitea/workflows/: test.yaml
.github/workflows/: test-template.yaml  test.yaml
includes/: badges.jinja
template/: README.md.jinja  hatch.toml
template/.gitea/workflows/: ci.yml
template/.github/workflows/: ci.yml  docs.yml
template/defaults/: main.yml.jinja
template/handlers/: main.yml.jinja
template/meta/: argument_specs.yml.jinja  extra_data.yml.jinja  main.yml.jinja
template/molecule/default/: CONTAINERFILE  converge.yml.jinja  molecule.yml  verify.yml
template/tasks/: main.yml
template/templates/: httpd.container.j2
template/vars/: main.yml.jinja
tests/: conftest.py  test_template.py
